[gd_scene load_steps=6 format=3 uid="uid://tugu8noqncrg"]

[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="1_63x0g"]
[ext_resource type="Script" path="res://src/UI/Styles/shake_item.gd" id="1_imi2d"]
[ext_resource type="PackedScene" uid="uid://d224iq2bnuuvn" path="res://src/UI/Components/input_with_slider.tscn" id="3_bt7m6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eknrx"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nralk"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="ShakeItem" type="VBoxContainer"]
offset_right = 210.0
offset_bottom = 200.0
script = ExtResource("1_imi2d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_eknrx")
theme_override_styles/focus = SubResource("StyleBoxFlat_nralk")
text = "X"

[node name="TwoDirectionContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TwoDirectionCheckButton" type="CheckButton" parent="TwoDirectionContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Two Direction"
text_overrun_behavior = 3

[node name="XContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="XContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X"

[node name="XInput" parent="XContainer" instance=ExtResource("1_63x0g")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="YContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="YContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y"

[node name="YInput" parent="YContainer" instance=ExtResource("1_63x0g")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="IntensityContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="IntensityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intensity"

[node name="IntensityInput" parent="IntensityContainer" instance=ExtResource("1_63x0g")]
layout_mode = 2
size_flags_horizontal = 3
type = 2
step = 0.5

[node name="QuantityContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="QuantityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quantity"

[node name="QuantityInput" parent="QuantityContainer" instance=ExtResource("1_63x0g")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="AlphaContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="AlphaContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alpha"

[node name="AlphaInput" parent="AlphaContainer" instance=ExtResource("3_bt7m6")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
max_value = 1.0

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="toggled" from="TwoDirectionContainer/TwoDirectionCheckButton" to="." method="_on_two_direction_check_button_toggled"]
[connection signal="changed" from="XContainer/XInput" to="." method="_on_x_input_changed"]
[connection signal="changed" from="YContainer/YInput" to="." method="_on_y_input_changed"]
[connection signal="changed" from="IntensityContainer/IntensityInput" to="." method="_on_intensity_input_changed"]
[connection signal="changed" from="QuantityContainer/QuantityInput" to="." method="_on_quantity_input_changed"]
[connection signal="changed" from="AlphaContainer/AlphaInput" to="." method="_on_alpha_input_changed"]
